Interactive examples, more description of bug algorithms

--- a/GeometricMotionPlanning.ipynb
+++ b/GeometricMotionPlanning.ipynb
@@ -56,17 +56,45 @@
     "Bug algorithms\n",
     "--------------\n",
     "\n",
+    "Bug algorithms are simple, clever planning methods that do not actually need a map of obstacles to work!  The only pieces of information needed on-board the robot are 1) a way to determine the robot's current location $X$ and goal location $G$, 2) a contact sensor, and 3) a bit of memory.  By studying how the robot would behave in certain maps, this give us a sense of how to analyze the performance of planners. \n",
+    "\n",
+    "The inspiration for bug algorithms comes from the right-hand rule_ for solving mazes. If you are in a maze, a sure-fire way not to get lost is to find a wall, face a direction so that the wall is on your right, and walk along the wall while keeping it immediately to your right.  By following this process, only two possibilities may result: 1) you exit the maze, or 2) you return to the point at which you first touched the wall.  If you return to the starting point, the wall makes a closed circuit, so the next step should be to find a new portion of wall that you did not touch, and apply the right-hand rule again for that new wall.  Using this approach, you are guaranteed to explore the entire maze.  (There is no significance to right vs left; you can just as easily apply a left-hand rule.)\n",
+    "\n",
+    "The first method we will study is called Bug 1.  Unlike the case of a maze, in planning we know which direction we would need to take to reach the goal.  So, Bug 1 proceeds as follows:\n",
+    "\n",
+    "1. Move in a straight line path toward $G$.\n",
+    "\n",
+    "2. If the robot reaches $G$, we are done.  \n",
+    "\n",
+    "3. If the robot hits an obstacle, then follow the right-hand rule and traverse its boundary \n",
+    "\n",
+    "4. This continues until the wall no longer is pointing against the straight line from $X$ toward $G$.  Once this occurs, continue from Step 1.\n",
+    "\n",
+    "It is important to note that in Step 4, this determination is done only locally.  It does not examine the overall shape of the obstacle to see if the straight line does not overlap the obstacle, only locally whether taking the direction $G-X$ leads the robot into free space. \n",
+    "\n",
     "*************\n",
     "\n",
     "![fig:Bug0](figures/planning/bug0.svg)\n",
     "\n",
     "<div class=\"figcaption\"><a name=\"fig:Bug0\">Figure 1</a>.\n",
-    "    The simple Bug 1 algorithm that simply heads toward the goal, turns\n",
-    "left, and then continues towards the goal whenever it\n",
-    "can.\n",
+    "    The simple Bug 1 algorithm that simply 1) heads toward the goal, 2) turns\n",
+    "left when it hits an obstacle, and proceeds to hug the wall, and 3) continues towards the goal\n",
+    "    whenever it can.\n",
     "</div>\n",
     "\n",
     "*************\n",
+    "\n",
+    "The second method is called Bug 2, and is a little more complex.  Here, we shall add some memory to the robot.\n",
+    "\n",
+    "1. Move in a straight line path toward $G$. \n",
+    "\n",
+    "2. If the robot reaches $G$, we are done.  \n",
+    "\n",
+    "3. If the robot hits an obstacle, remember the point $P$ at which it is hit.  Follow the right hand-rule.\n",
+    "\n",
+    "4. If the robot crosses the line $\\overline{PG}$ as it walks along the wall, determine whether $\\| X-G \\| < \\|P-G\\|$ and the wall is not pointing against the straight line from $X$ toward $G$.  If both conditions are satisfied, continue from step 1.  Otherwise, keep walking.\n",
+    "\n",
+    "5. If $P$ is reached again, return \"No path\"\n",
     "\n",
     "*************\n",
     "\n",
@@ -81,6 +109,8 @@
     "\n",
     "*************\n",
     "\n",
+    "Bug 1 might seem at first to be a little more efficient than Bug 2, because it will opportunistically move in a straight line toward the goal whenever it can break away from the obstacle.  Bug 2 has to hug the boundary of an obstacle until it reaches the line $\\overline{PG}$ again.  However, the problem in Bug 1 is that it may fall into an _infinite loop_, as shown in Fig. 3.  Here, the obstacle is set up so that the robot breaks away from the obstacle, only to hit it again.\n",
+    "\n",
     "*************\n",
     "\n",
     "![fig:Bugtrap](figures/planning/bugtraps.svg)\n",
@@ -91,7 +121,24 @@
     "succeeds.\n",
     "</div>\n",
     "\n",
-    "*************\n"
+    "*************\n",
+    "\n",
+    "By contrast, Bug 2 delays breaking away from the obstacle, which traverses a longer length of the obstacle boundary. In this example, the breakaway point is chosen more judiciously to avoid the infinite loop.  But this is only an anecdote; can we _prove_ that Bug 2 will always succeed (i.e., is a complete planner)?  It turns out that we can.\n",
+    "\n",
+    "To prove completeness of Bug 2, we shall need to establish 3 facts:\n",
+    "\n",
+    "A. For each obstacle, Bug 2 will break away from it at some point if there is a path to the goal.\n",
+    "\n",
+    "B. The sequence of hit points decreases in distance to the goal.\n",
+    "\n",
+    "C. If there is no path to the goal, then Bug 2 will terminate correctly with failure.\n",
+    "\n",
+    "\n",
+    "Let $O$ be a connected, bounded, planar obstacle, and $P$ any location at which Bug 2 hits it.  Now consider the  curve $\\partial O$ traversed by the right hand rule.  This curve will be the boundary of $O$ if $O$ contains zero holes, but if $O$ contains holes then it will be some connected component of its boundary.  $\\partial O$ is a closed curve dividing the plane into two connected components, and a fact of plane geometry is that a closed curve $C$ separates two points $A \\notin C$ and $B \\notin C$ iff $\\overline{AB}$ intersects $C$ in an odd number of points.  Let $P^\\prime$ be the point immediately preceeding $P$ on the robot's path.  We know that $P^\\prime \\notin O$, and $\\|P^\\prime - G \\| > \\|P-G\\|$, because Bug 2 only moves toward the goal, never away from it.   So, if there is a path to the goal, then the line $\\overline{P^\\prime G}$ intersects $\\partial O$ an even number of times.   Hence, there is at least one other intersection point other than $P$.  Let $C$ be the closest intersection point.  The line segment between $C$ and $G$ will be pointing away from $O$, hence, we know that $C\\neq P$ since the line from $P$ to $G$ points into $O$.  Hence, the robot must break away at from $\\partial O$ at some closer point.  This establishes fact A.\n",
+    "\n",
+    "Second, let $L$ be the point at which the robot leaves obstacle $O$.  If the robot hits another obstacle, it will have traveled in a straight line from $L$ to $G$, so its next hit point $P^\\prime$ is closer to $G$ than $L$.  Since $\\|P - G \\| > \\| L - G \\| > \\|P^\\prime - G\\|$, the sequence of hit points are decreasing in distance, establishing fact B.\n",
+    "\n",
+    "Finally, we need to establish that termination at Step 5 correctly determines that no path exists.  As established in B, the sequence of hit points has decreasing distance, so an infinite loop is not possible: Bug 2 must either find the goal or terminate with \"No path\".  As established in A, \"No path\" will not be returned if there is a path to the goal. By contradiction, returning \"No path\" implies there is no path to the goal.  QED."
    ]
   },
   {
@@ -106,7 +153,7 @@
     "by computing a graph $G$ where vertices indicate free configurations and\n",
     "edges indicate collision-free paths (usually straight lines). Then,\n",
     "graph search is performed on this structure to produce a free path. See\n",
-    "[Appendix C.1](Graph%20Search.ipynb) for more information about graph search\n",
+    "[Appendix C.1](GraphSearch.ipynb) for more information about graph search\n",
     "algorithms.\n",
     "\n",
     "### Grid search\n",
@@ -132,6 +179,8 @@
     "</div>\n",
     "\n",
     "****************\n",
+    "\n",
+    "If the grid has $m$ divisions in the $x$ direction and $n$ divisions in the $y$ direction, then there are at most $mn$ vertices in the grid.  As discussed in [Appendix C.1](GraphSearch.ipynb), the running time of Dijkstra's algorithm will be $O(mn \\log mn)$.\n",
     "\n",
     "There are two main issues with grid search. First, if the obstacles are\n",
     "constructed to contain *narrow passages* smaller than the resolution of\n",
@@ -572,9 +621,7 @@
     "    of narrow passages between obstacles.\n",
     "\n",
     "-   Plan paths with straight line segments connected by minimum-radius\n",
-    "    arcs. The Reeds-Shepp curves\n",
-    "    (Sec. [\\[sec:DubinsCar\\]](#sec:DubinsCar){reference-type=\"ref\"\n",
-    "    reference=\"sec:DubinsCar\"}) can be extended to handle obstacle\n",
+    "    arcs. The [Reeds-Shepp curves](#WhatAreDynamicsAndControl.ipynb#Dubins-car) can beextended to handle obstacle\n",
     "    avoidance in some simple cases.\n",
     "\n",
     "-   Define a set of curvature-constrained primitive maneuvers, and\n",
