--- a/InverseKinematics.ipynb
+++ b/InverseKinematics.ipynb
@@ -2169,6 +2169,166 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Interactive examples\n",
+    "\n",
+    "### Planar 2R manipulator IK"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "code_folding": [
+     0
+    ]
+   },
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "373f04ba3947480980774312ea473609",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "S2xhbXB0V2lkZ2V0KGNhbWVyYT17dSdmYXInOiAxMDAwLCB1J3Bvc2l0aW9uJzoge3UneSc6IDYuNzAyNTYzNDQ0MTQ5MzY3LCB1J3gnOiAwLjI3MDU3NjMxMzUzMzA1ODQ0LCB1J3onOiAtMC7igKY=\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "65f50f29191a4181af28f5043bbaddf8",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "#Code for the interactive example (run me and the next code block!)\n",
+    "import time\n",
+    "from klampt import *\n",
+    "from klampt.math import so3,vectorops\n",
+    "from klampt.model import ik\n",
+    "import math\n",
+    "from IPython.display import HTML,clear_output\n",
+    "import ipywidgets as widgets\n",
+    "import ipyklampt\n",
+    "\n",
+    "world = WorldModel()\n",
+    "world.readFile(\"data/planar2R.rob\")\n",
+    "robot = world.robot(0)\n",
+    "ee_local = (1,0,0)  #end effector coordinates\n",
+    "robot.link(0).appearance().setColor(0.4,0.4,0.4)\n",
+    "robot.link(1).appearance().setColor(0.2,0.2,0.2)\n",
+    "#joint limits\n",
+    "qmin = [-math.pi/2,-math.pi/2]\n",
+    "qmax = [math.pi/2,math.pi/2]\n",
+    "robot.setJointLimits(qmin,qmax)\n",
+    "kvis = ipyklampt.KlamptWidget(world,width=400,height=400)\n",
+    "\n",
+    "#look down\n",
+    "kvis.set_camera({u'near': 0.1, u'target': {u'y': 0, u'x': 0, u'z': 0}, u'far': 1000, u'position': {u'y': 6.702563444149367, u'x': 0.27057631353305844, u'z': -0.049312632332197764}, u'up': {u'y': 0.44113772676914204, u'x': -0.003726563135538217, u'z': -0.897431679153433}})\n",
+    "controls = widgets.HBox([])\n",
+    "\n",
+    "display(kvis)\n",
+    "display(controls)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "code_folding": [
+     0
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "#Run me this after the visualization above has spun up\n",
+    "\n",
+    "kvis.add_ghost(\"ghost\")\n",
+    "kvis.set_color(\"ghost\",0,1,0,0.5)\n",
+    "\n",
+    "EPSILON = 1e-8\n",
+    "L1 = 1.0\n",
+    "L2 = 1.0\n",
+    "\n",
+    "def ik_2R_analytical(L1,L2,x,y):\n",
+    "    \"\"\"Solve IK for a 2R robot with link lengths L1 and L2.\n",
+    "    \n",
+    "    Returns a pair (N,solutions)\n",
+    "    - N: number of solutions (can be 0, 1, 2, or infinity)\n",
+    "    - solutions: a tuple of solution configurations. If N=infinity,\n",
+    "      solutions is the tuple (None,q2).\n",
+    "    \"\"\"\n",
+    "    r2 = x**2+y**2\n",
+    "    c2 = (r2-L1**2-L2**2)/(2*L1*L2)\n",
+    "    if c2 > 1.0 or c2 < -1.0:\n",
+    "        return (0,())\n",
+    "    q2_1 = math.acos(c2)\n",
+    "    q2s = [q2_1]\n",
+    "    if abs(q2_1) > EPSILON and abs(q2_1-math.pi) > EPSILON:\n",
+    "        q2s.append(-q2_1)\n",
+    "    solns = []\n",
+    "    for q2 in q2s:\n",
+    "        ex = 1.0+math.cos(q2)\n",
+    "        ey = math.sin(q2)\n",
+    "        if abs(ex)<EPSILON and abs(ey) < EPSILON:\n",
+    "            #infinite solutions\n",
+    "            return (float('inf'),(None,q2))\n",
+    "        theta = math.atan2(y,x)\n",
+    "        etheta = math.atan2(ey,ex)\n",
+    "        solns.append((theta-etheta,q2))\n",
+    "    return (len(solns),solns)\n",
+    "\n",
+    "def ik_2R_numerical(q0,x,y):\n",
+    "    robot.setConfig(q0)\n",
+    "    obj = ik.objective(robot.link(1),local=ee_local,world=(x,y,0))\n",
+    "    solver = ik.solver(obj)\n",
+    "    solver.solve()\n",
+    "    return q0\n",
+    "\n",
+    "#called whenever configuration is edited\n",
+    "def point_update_cb(point):\n",
+    "    global L1,L2\n",
+    "    N,solns = ik_2R_analytical(L1,L2,point[0],point[1])\n",
+    "    if N == 0:\n",
+    "        #no solution\n",
+    "        kvis.set_color(\"Link 0\",1,0,0)\n",
+    "        kvis.set_color(\"Link 1\",1,0,0)\n",
+    "        #kvis.hide(\"ghost\",True)\n",
+    "    elif N == 1 or N == 2:\n",
+    "        kvis.set_color(\"Link 0\",0.4,0.4,0.4)\n",
+    "        kvis.set_color(\"Link 1\",0.2,0.2,0.2)\n",
+    "        #kvis.hide(\"ghost\",False)\n",
+    "        robot.setConfig(solns[0])\n",
+    "        kvis.set_ghost_config(solns[1],\"ghost\")\n",
+    "    else:\n",
+    "        #infinite solutions\n",
+    "        kvis.set_color(\"Link 0\",1,1,0)\n",
+    "        kvis.set_color(\"Link 1\",1,1,0)\n",
+    "        #kvis.hide(\"ghost\",true)\n",
+    "        robot.setConfig((0,solns[0][1]))\n",
+    "    kvis.update()\n",
+    "pt = [0,0,0]\n",
+    "point_widget = ipyklampt.EditPoint(pt,[-2,-2,-1],[2,2,1],klampt_widget=kvis,callback=point_update_cb)\n",
+    "\n",
+    "controls.children =(point_widget,)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
