Added better startup docs

--- a/Book.ipynb
+++ b/Book.ipynb
@@ -105,7 +105,7 @@
     "\n",
     "This will launch a web browser interface to Jupyter.\n",
     "\n",
-    "4. The first time you install, please choose the `nbextension` tab from the Home screen, and enable the LaTeX and Table of Contents plugins.  This will lead to the best reading experience.\n",
+    "4. The first time you install, please choose the `nbextension` tab from the Home screen, and enable the \"(some) LaTeX environments for Jupyter\", \"Table of Contents\", and \"Codefolding\" plugins.  This will lead to the best reading experience.\n",
     "\n",
     "5. Open the Jupyter Notebook files in the RoboticSystemsBook folder (this page is named Book). Happy reading!\n"
    ]
