Fixed some problems with definitions

--- a/Calculus.ipynb
+++ b/Calculus.ipynb
@@ -114,22 +114,19 @@
     "same notions of continuity, minima, and maxima that apply to univariate\n",
     "functions also apply to scalar fields.\n",
     "\n",
-    "\\define{Continuity}\n",
-    "A scalar field $f$ is continuous on a domain $S\\in \\mathbb{R}^n$ if for\n",
-    "every point $\\V{x} \\in S$ and $\\epsilon > 0$, there exists a\n",
-    "neighborhood with radius $\\delta$ around $\\V{x}$ that satisfies\n",
-    "$|f(\\V{x})-f(\\V{y})| < \\epsilon$ for all $y \\in N_\\delta(\\V{x})$.\n",
+    "> **Continuity**. A scalar field $f$ is continuous on a domain $S\\in \\mathbb{R}^n$ if for\n",
+    "> every point $\\V{x} \\in S$ and $\\epsilon > 0$, there exists a\n",
+    "> neighborhood with radius $\\delta$ around $\\V{x}$ that satisfies\n",
+    "> $|f(\\V{x})-f(\\V{y})| < \\epsilon$ for all $y \\in N_\\delta(\\V{x})$.\n",
     "\n",
-    "\\define{Extreme value theorem}\n",
-    "A continuous scalar field $f$ attains a minimum and maximum value on a\n",
-    "*closed* set $S \\subseteq \\mathbb{R}^n$.\n",
+    "> **Extreme value theorem**. A continuous scalar field $f$ attains a minimum and maximum value on a\n",
+    "> *closed* set $S \\subseteq \\mathbb{R}^n$.\n",
     "\n",
-    "\\define{Local minima}\n",
-    "$\\V{x}$ is said to be a local minimum of a scalar field $f$ on an *open*\n",
-    "set $S \\subseteq \\mathbb{R}^n$ if there exists a neighborhood\n",
-    "$N_r(\\V{x})$ around $\\V{x}$ such that $f(\\V{x}) < f(\\V{y})$ for all\n",
-    "$\\V{y} \\in N_r(\\V{x}) \\setminus \\{ \\V{x}\\}$. A similar definition holds\n",
-    "for local maxina.\n",
+    "> ** Local minima**. $\\V{x}$ is said to be a local minimum of a scalar field $f$ on an *open*\n",
+    "> set $S \\subseteq \\mathbb{R}^n$ if there exists a neighborhood\n",
+    "> $N_r(\\V{x})$ around $\\V{x}$ such that $f(\\V{x}) < f(\\V{y})$ for all\n",
+    "> $\\V{y} \\in N_r(\\V{x}) \\setminus \\{ \\V{x}\\}$. A similar definition holds\n",
+    "> for local maxina.\n",
     "\n",
     "## Partial derivatives\n",
     "\n",
@@ -246,10 +243,10 @@
     "&= \\nabla_{\\V{d}}f(\\V{a})\n",
     "\\end{split}$$ as desired. QED.\n",
     "\n",
-    "\\define{First-order Taylor expansion of a scalar field}\n",
-    "If a scalar field $f$ is differentiable, we can use the gradient to\n",
-    "define the first-order Taylor expansion of $f$ about a point $\\V{a}$:\n",
-    "$$f(\\V{x}) = f(\\V{a}) + (\\nabla f(\\V{a})) \\cdot (\\V{x}-\\V{a}) + O(||\\V{x}-\\V{a}||^2).$$\n",
+    "> **First-order Taylor expansion of a scalar field**.\n",
+    "> If a scalar field $f$ is differentiable, we can use the gradient to\n",
+    "> define the first-order Taylor expansion of $f$ about a point $\\V{a}$:\n",
+    "> $$f(\\V{x}) = f(\\V{a}) + (\\nabla f(\\V{a})) \\cdot (\\V{x}-\\V{a}) + O(||\\V{x}-\\V{a}||^2).$$\n",
     "\n",
     "Note that the equation\n",
     "$f(\\V{x}) = f(\\V{a}) + \\nabla f(\\V{a}) \\cdot (\\V{x}-\\V{a})$ defines a\n",
