Fixed some code

--- a/Control.ipynb
+++ b/Control.ipynb
@@ -289,7 +289,7 @@
     "\\dot{x}(0) = (a-bk_P) x(0) + c = c_0^- c_1^- + c_0^+ c_1^+\n",
     "\\end{gathered}$$ which is a linear system of equations in $c_0^-$ and\n",
     "$c_0^+$:\n",
-    "$$\\ColVecTwo{x(0)}{\\dot{x}(0)} = \\MatTwo{1}{1}{c_1^-}{c_1^+} \\ColVecTwo{c_0^-}{c_0^+}.$$\n",
+    "$$\\begin{bmatrix}{x(0)}\\\\{\\dot{x}(0)}\\end{bmatrix} = \\begin{bmatrix}{1}&{1}\\\\{c_1^-}&{c_1^+}\\end{bmatrix} \\begin{bmatrix}{c_0^-}\\\\{c_0^+}\\end{bmatrix}.$$\n",
     "This can be solved using matrix inversion except for the case where\n",
     "$c_1^- = c_1^+$, which we shall ignore for just a moment. First, let us\n",
     "examine whether $x(t)$ converges to 0 as $t \\rightarrow \\infty$, which\n",
@@ -592,10 +592,10 @@
     "system in terms of a modified dynamics equation with a state variable\n",
     "$y = (x,1)$ augmented by a constant 1:\n",
     "$$\\dot{y} = \\tilde{A} y + \\tilde{B} u$$ with\n",
-    "$$\\tilde{A} = \\left[\\begin{array}{cc}\n",
+    "$$\\tilde{A} = \\begin{bmatrix}\n",
     "A & c \\\\\n",
     "0_{1\\times n} & 0\n",
-    "\\end{array}\\right]$$ and $$\\tilde{B} = \\ColVecTwo{B}{0_{1\\times m}}$$\n",
+    "\\end{bmatrix}$$ and $$\\tilde{B} = \\begin{bmatrix}{B}\\\\{0_{1\\times m}}\\end{bmatrix}$$\n",
     "(using block matrix notation).\n",
     "\n",
     "These systems may be stable, but will not be convergent with a control\n",
