--- a/InverseKinematics.ipynb
+++ b/InverseKinematics.ipynb
@@ -509,7 +509,7 @@
     "factor of $\\pi$, giving a flipped coordinate system for the 2R solution\n",
     "where the robot \"reaches backwards.\" As a result, there are 2 additional\n",
     "solutions:\n",
-    "$$(q_2^\\prime,q_3^\\prime) \\in 2RIK(L_2,L_3,(-\\sqrt{x_D^2 + y_D^2},-z_D)).$$\n",
+    "$$(q_2^\\prime,q_3^\\prime) \\in 2RIK(L_2,L_3,(-\\sqrt{x_D^2 + y_D^2},-z_D+L_1)).$$\n",
     "each associated with the value $q_1^\\prime = atan2(y_D,x_D) + \\pi$.\n",
     "Hence, altogether, up to 4 solutions exist.\n",
     "\n",
