Changed some capitalization

--- a/3DRotations.ipynb
+++ b/3DRotations.ipynb
@@ -49,7 +49,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Topology Primer: Rotations in 2D\n",
+    "Topology primer: rotations in 2D\n",
     "--------------------------------\n",
     "\n",
     "Not only is it relatively difficult to visualize 3D rotations compared\n",
@@ -104,7 +104,7 @@
     "\n",
     "***************\n",
     "\n",
-    "### Basics Concepts in Topology\n",
+    "### Basics concepts in topology\n",
     "\n",
     "The topology of a space describes the connectedness of paths through it.\n",
     "Paths in a space $\\mathcal{X}$ are continuous functions\n",
@@ -135,7 +135,7 @@
     "rotation, or instead requires examining and minimizing the distance\n",
     "traveled both CW and CCW.\n",
     "\n",
-    "### Geodesic Distance and Interpolation \n",
+    "### Geodesic distance and interpolation \n",
     "\n",
     "The path between two points in a space with minimum distance is known as\n",
     "a *geodesic*. Geodesics are the most direct route between two points on\n",
@@ -169,7 +169,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Representing Elements of Topological Spaces\n",
+    "## Representing elements of topological spaces\n",
     "\n",
     "The most common topological spaces we discuss in robotics include:\n",
     "\n",
@@ -268,7 +268,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "3D Rotation Matrices\n",
+    "3D rotation matrices\n",
     "--------------------\n",
     "\n",
     "Now let us return back to the 3D rotation case. As described before, 3D rotations\n",
@@ -462,7 +462,7 @@
     "to $B$'s original $Z$ axis. In general, intrinsic rotations are composed\n",
     "in reverse order to extrinsic rotations.\n",
     "\n",
-    "Euler Angles\n",
+    "Euler angles\n",
     "------------\n",
     "\n",
     "Euler angles are a three-parameter representation of rotations\n",
@@ -508,7 +508,7 @@
     "intervening $Y$ rotation modifies the axis by which one of the $R_Z$\n",
     "terms rotates, and can in fact span all rotation matrices.\n",
     "\n",
-    "### Conversion between Matrices\n",
+    "### Conversion between matrices\n",
     "\n",
     "Conversion from Euler angles to rotation matrices is a straightforward\n",
     "computation of\n",
@@ -548,7 +548,7 @@
     "and $\\psi$ exist. All of these solutions have $\\phi + \\psi$ equal to the\n",
     "argument of $(-r_{12} / s_2 ,r_{22} / s_2)$.\n",
     "\n",
-    "### Singularities, aka Gimbal Lock\n",
+    "### Singularities, aka gimbal lock\n",
     "\n",
     "The minimal range of Euler angles $(\\phi,\\theta,\\psi)$ to cover the span\n",
     "of rotations is the set\n",
@@ -589,7 +589,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Axis-Angle and Rotation Vector Representations\n",
+    "Axis-angle and rotation vector representations\n",
     "----------------------------------------------\n",
     "\n",
     "Another popular rotation representation is axis-angle form, which\n",
@@ -626,7 +626,7 @@
     "become extremely useful when we discuss the derivative of rotation\n",
     "matrices in the context of the angular velocity of rigid bodies.)\n",
     "\n",
-    "### Converting to Rotation Matrix\n",
+    "### Converting to rotation matrix\n",
     "\n",
     "To convert from axis-angle form to rotation matrices, we use *Rodrigues'\n",
     "formula*. The derivation of Rodrigues' formula starts by decomposing a\n",
@@ -689,7 +689,7 @@
     "and use the formula above.\n",
     "$$R_m(\\V{m}) = R_{aa}(\\V{m} / \\| \\V{m} \\|, \\| \\V{m} \\|)$$\n",
     "\n",
-    "### Converting from a Rotation Matrix\n",
+    "### Converting from a rotation matrix\n",
     "\n",
     "To convert back from a rotation matrix $R$ to axis-angle representation,\n",
     "we can calculate the entries of $R_{aa}(\\V{a},\\theta)$ and invert the\n",
@@ -782,7 +782,10 @@
     "a final rotation $R_1$, we may perform the interpolation\n",
     "$$R(s) = R_0 R_{aa}(\\V{a},s\\theta)$$ where $(\\V{a},\\theta)$ is the axis\n",
     "angle representation of the relative rotation $R_0^T R_1$. (Verify that\n",
-    "$R(0) = R_0$ and $R(1) = R_1$.)"
+    "$R(0) = R_0$ and $R(1) = R_1$.)\n",
+    "\n",
+    "Because of its common utility, it may be useful to consider representing this\n",
+    "procedure as a SO(3) geodesic subroutine $SO3interp(R_0,R_1,s)$."
    ]
   },
   {
@@ -868,7 +871,7 @@
     "/ subtractions in ($\\ref{eq:QuaternionMultiplication}$) as compared to 27\n",
     "multiplications and 18 additions for standard matrix multiplication.\n",
     "\n",
-    "### Geodesic Interpolation\n",
+    "### Geodesic interpolation\n",
     "\n",
     "An operation called spherical linear interpolation, or \"slerp,\" can be\n",
     "used to perform geodesic interpolation of rotations using quaternions.\n",
