--- a/CoordinateTransformations.ipynb
+++ b/CoordinateTransformations.ipynb
@@ -53,7 +53,7 @@
     "conventions, and basic identities that will be used throughout this\n",
     "book.\n",
     "\n",
-    "Vectors and Coordinates\n",
+    "Vectors and coordinates\n",
     "-----------------------\n",
     "\n",
     "Vectors extend concepts that are familiar to us from working with real\n",
@@ -76,7 +76,7 @@
     "and 3D, and follow it with a discussion about the importance of\n",
     "separating meaning from representation.\n",
     "\n",
-    "### 2D Coordinate Frames\n",
+    "### 2D coordinate frames\n",
     "\n",
     "In the \"layman's definition\", an $n$-dimensional *vector* $\\V{x}$ is a\n",
     "tuple of real numbers $\\V{x}=(x_1,\\ldots,x_n) \\in \\Reals^n$. For now, we\n",
@@ -115,7 +115,7 @@
     "frame will often be left implicit, or spoken of as the reference frame\n",
     "of the coordinates.\n",
     "\n",
-    "### 3D Coordinate Frames\n",
+    "### 3D coordinate frames\n",
     "\n",
     "The situation in 3D space is similar, except that we represent a 3D\n",
     "position $P$ with a 3-element vector $\\V{p}=(p_x, p_y, p_z)$ that gives\n",
@@ -454,7 +454,7 @@
     "vector $\\V{s}$ which determines the scaling in each direction by mapping\n",
     "to the diagonal of an $n \\times n$ matrix.. $$S(\\V{s}) = diag(\\V{s})$$\n",
     "\n",
-    "### Compositions of Linear Transformations\n",
+    "### Compositions of linear transformations\n",
     "\n",
     "When performing two linear transformations one after another, the\n",
     "results are determined via matrix multiplication. Suppose that\n",
@@ -726,7 +726,7 @@
     "$Y \\cdot (P - O) = p_y$ without regards to choosing a particular value\n",
     "of $W$.\n",
     "\n",
-    "### Directional Quantities\n",
+    "### Directional quantities\n",
     "\n",
     "Next, let us illustrate how the coordinates of directional quantities\n",
     "transform. As an illustration, let us go back in time and add a second\n",
@@ -750,7 +750,7 @@
     "shorthand that $D = d_x X + d_y Y$, $D = Q - P$, $d_x = D \\cdot X$, and\n",
     "$d_y = D \\cdot Y$.\n",
     "\n",
-    "### Associating Physical Meaning to Operations on Coordinates\n",
+    "### Associating physical meaning to operations on coordinates\n",
     "\n",
     "The main distinction between positions and directions is that the choice\n",
     "of origin does not affect how directions are represented. However, both\n",
@@ -799,7 +799,7 @@
     "Finally, dot products and norms are meaningful only when performed on\n",
     "directional quantities.\n",
     "\n",
-    "### Working with Coordinates\n",
+    "### Working with coordinates\n",
     "\n",
     "When working with different coordinate representations, it is easy to\n",
     "make mistakes in calculations. Below are some common pitfalls.\n",
@@ -870,7 +870,7 @@
     "\n",
     "4.  Performing operations on matrices of incompatible size.\n",
     "\n",
-    "### Coordinate Management\n",
+    "### Coordinate management\n",
     "\n",
     "\n",
     "It is essential when working with coordinates to understand 1) which\n",
