--- a/InverseKinematics.ipynb
+++ b/InverseKinematics.ipynb
@@ -85,9 +85,7 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
-    "code_folding": [
-     0
-    ]
+    "code_folding": []
    },
    "outputs": [
     {
