Fixed some errors in conversion

--- a/MotionPlanningHigherDimensions.ipynb
+++ b/MotionPlanningHigherDimensions.ipynb
@@ -281,10 +281,10 @@
     "2. $E \\gets \\{ \\}$.\n",
     "3. **for** $i=1,\\ldots,N$ **do**\n",
     "4. &nbsp;&nbsp;&nbsp;$q \\gets Sample()$\n",
-    "5. &nbsp;&nbsp;&nbsp;**if** $q \\notin \\mathcal{F}$ return to Line 3.\n",
+    "5. &nbsp;&nbsp;&nbsp;**if** not Feasible($q$) **then** return to Line 3.\n",
     "6. &nbsp;&nbsp;&nbsp;Add $q$ to $V$\n",
     "7. &nbsp;&nbsp;&nbsp;**for** all $p \\in near (q,V)$\n",
-    "8. &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;**if** $\\overline{pq} \\in \\mathcal{F}$\n",
+    "8. &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;**if** Visible($p,q$) **then**\n",
     "9. &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;Add $(p,q)$ to $E$.\n",
     "10. Search $G = (V,E)$, with Cartesian distance as the edge cost, to connect $s$ and $g$.\n",
     "11. **return** the path if one is found.\n",
@@ -373,11 +373,11 @@
     "* $CC[g] \\gets \\{g\\}$.\n",
     "* **while** time-elapsed $< T$ **do**\n",
     "* &nbsp;&nbsp;&nbsp;$q \\gets Sample()$\n",
-    "* &nbsp;&nbsp;&nbsp;**if** $q \\notin \\mathcal{F}$ return to Line 3.\n",
+    "* &nbsp;&nbsp;&nbsp;**if** not Feasible($q$) return to Line 3.\n",
     "* &nbsp;&nbsp;&nbsp;Add $q$ to $V$\n",
     "* &nbsp;&nbsp;&nbsp;$CC[q] \\gets \\{q\\}$\n",
     "* &nbsp;&nbsp;&nbsp;**for** all $p \\in near (q,V)$\n",
-    "* &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;**if** $\\overline{pq} \\in \\mathcal{F}$\n",
+    "* &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;**if** Visible($p,q$) **then**\n",
     "* &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;Add $(p,q)$ to $E$.\n",
     "* &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;Merge $CC[p]$ and $CC[q]$\n",
     "* &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;**if** $g \\in CC[s]$ \n",
@@ -389,8 +389,7 @@
     "Every time an isolated milestone gets added to the graph (Lines 3, 4, and 9), it gets assigned\n",
     "a connected component in the data structure $CC$. The connected\n",
     "components are maintained as more edges are added to the roadmap\n",
-    "(Figure [\\[fig:IncrementalPRM\\]](#fig:IncrementalPRM){reference-type=\"ref\"\n",
-    "reference=\"fig:IncrementalPRM\"}). Once $s$ and $g$ are in the same\n",
+    "([Figure 3](#fig:IncrementalPRM)). Once $s$ and $g$ are in the same\n",
     "connected component (Line 14), the algorithm stops. In Line 5, the main\n",
     "loop is stopped by a *time limit* $T$ rather than an iteration limit.\n",
     "This means the overall running time can be controlled more precisely,\n",
@@ -465,23 +464,34 @@
     "them. If connected, the joined trees contain a unique path from the\n",
     "start to the goal.\n",
     "\n",
-    "$T_s \\gets \\{ s \\}$. $T_g \\gets \\{ g \\}$. $q_{rand} \\gets Sample()$\n",
-    "$q_e \\gets$Extend-Tree$(T_s,q_{rand},\\delta)$\n",
-    "$q_e^\\prime \\gets$Extend-Tree$(T_g,q_{rand},\\delta)$ Add edge\n",
-    "$q_e\\rightarrow q_e^\\prime$ to connect $T_s$ and $T_g$ the path from $s$\n",
-    "to $g$ \"no path\"\n",
+    "********************\n",
+    "<a name=\"alg:RRTConnect\">Algorithm RRT-Connect</a>\n",
+    "1. $T_s \\gets \\{ s \\}$.\n",
+    "* $T_g \\gets \\{ g \\}$.\n",
+    "* **for** $i=1,...,N$ **do**\n",
+    "* &nbsp;&nbsp;&nbsp;$q_{rand} \\gets Sample()$\n",
+    "* &nbsp;&nbsp;&nbsp;$q_e \\gets$Extend-Tree$(T_s,q_{rand},\\delta)$\n",
+    "* &nbsp;&nbsp;&nbsp;$q_e^\\prime \\gets$Extend-Tree$(T_g,q_{rand},\\delta)$\n",
+    "* &nbsp;&nbsp;&nbsp;**if** $d(q_e,q_e^\\prime) \\leq \\delta$ and Visible($q_e,q_e^\\prime$)**then**\n",
+    "* &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;Add edge $q_e\\rightarrow q_e^\\prime$ to connect $T_s$ and $T_g$\n",
+    "* &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;**return** the path from $s$ to $g$\n",
+    "* **return** \"no path\"\n",
     "\n",
-    "[\\[alg:RRTConnect\\]]{#alg:RRTConnect label=\"alg:RRTConnect\"}\n",
+    "***********************\n",
     "\n",
-    "$q_{near} \\gets Nearest(T,q_{rand})$\n",
-    "$q \\gets q_{near} + \\min{1,\\frac{\\delta}{d(q_{rand},q_{near})}}(q_{rand}-q_{near})$\n",
-    "Add edge $q_{near}\\rightarrow q$ to $T$. $q$. $q_{near}$.\n",
+    "********************\n",
+    "<a name=\"alg:ExtendTree\">Algorithm Extend-Tree</a>\n",
+    "1. $q_{near} \\gets Nearest(T,q_{rand})$\n",
+    "2. $q \\gets q_{near} + \\min{1,\\frac{\\delta}{d(q_{rand},q_{near})}}(q_{rand}-q_{near})$\n",
+    "3. **if** Visible$(q_{near},q)$ **then**\n",
+    "4. &nbsp;&nbsp;&nbsp;Add edge $q_{near}\\rightarrow q$ to $T$.\n",
+    "5. &nbsp;&nbsp;&nbsp;**return**$q$.\n",
+    "6. **return** $q_{near}$.\n",
     "\n",
-    "[\\[alg:ExtendTree\\]]{#alg:ExtendTree label=\"alg:ExtendTree\"}\n",
+    "********************\n",
     "\n",
     "Specifically, the pseudocode is listed in\n",
-    "Alg. [\\[alg:RRTConnect\\]](#alg:RRTConnect){reference-type=\"ref\"\n",
-    "reference=\"alg:RRTConnect\"}. $T_s$ and $T_g$ denote the trees rooted at\n",
+    "[Alg. RRT-Connect](#alg:RRTConnect). $T_s$ and $T_g$ denote the trees rooted at\n",
     "the start and goal, respectively. In Line 3, a random configuration is\n",
     "drawn, and in Lines 4--5, the trees are extended toward it along a\n",
     "straight line path using the Extend-Tree subroutine. RRT has a key\n",
@@ -493,8 +503,7 @@
     "in exploring the free space.\n",
     "\n",
     "Code for $Extend-Tree$ is given in\n",
-    "Alg. [\\[alg:ExtendTree\\]](#alg:ExtendTree){reference-type=\"ref\"\n",
-    "reference=\"alg:ExtendTree\"}. It first performs a nearest-neighbor query\n",
+    "[Alg. Extend-Tree](#alg:ExtendTree). It first performs a nearest-neighbor query\n",
     "on the milestones in the given tree to determine a milestone $q_{near}$.\n",
     "It then extends a short path no more than distance $\\delta$ toward the\n",
     "destination $q_{rand}$. If this edge is visible, then it is added to the\n",
